examples/test/testpolicy3950.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3950
  namespace: namespace164
spec:
  podSelector:
    matchLabels:
      key37: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value3
          key13: value17
      podSelector:
        matchLabels:
          key42: value1
          key34: value5
